--- a/index.html
+++ b/index.html
@@ -7,5 +7,11 @@
   </head>
   <body>
     <h1>Buku Resep chef Mario</h1>
+    <h2>Telur goreng</h2>
+    <ul>
+      <li>Minyak</li>
+      <li>Garam</li>
+      <li>Telur</li>
+    </ul>
   </body>
 </html>
